[gd_scene load_steps=28 format=3 uid="uid://ds306i63pp7g5"]

[ext_resource type="Script" uid="uid://c2qgdy35nj6ut" path="res://scripts/mario.gd" id="1_w6o04"]
[ext_resource type="Texture2D" uid="uid://d3jwm15et3t22" path="res://assets/Sprites/Mario_Small_Idle.png" id="2_20hlw"]
[ext_resource type="Texture2D" uid="uid://k303fjvwyalc" path="res://assets/Sprites/Mario_Big_Slide.png" id="2_27iqg"]
[ext_resource type="Script" uid="uid://cbjesli21y4y" path="res://scripts/player_animated_sprite.gd" id="3_20hlw"]
[ext_resource type="Texture2D" uid="uid://c3njnoy5owfh3" path="res://assets/Sprites/Mario_Big_Jump.png" id="3_vhi1w"]
[ext_resource type="Shape2D" uid="uid://8ht2ad82twq8" path="res://resources/collision_shapes/small_mario_collision_shape.tres" id="3_vhu77"]
[ext_resource type="Texture2D" uid="uid://crqgheu7ndoxs" path="res://assets/Sprites/Mario_Big_Pole.png" id="4_k3ci4"]
[ext_resource type="Texture2D" uid="uid://dvnr77h30cjn6" path="res://assets/Sprites/Mario_Big_Run1.png" id="5_sh17w"]
[ext_resource type="Texture2D" uid="uid://biwgmc04ug3tt" path="res://assets/Sprites/Mario_Big_Run2.png" id="6_k3ci4"]
[ext_resource type="Texture2D" uid="uid://ct8uqpacoxaq1" path="res://assets/Sprites/Mario_Big_Idle.png" id="6_vk2xc"]
[ext_resource type="Texture2D" uid="uid://4axg8se7m40x" path="res://assets/Sprites/Mario_Shooting_Idle.png" id="7_bymyn"]
[ext_resource type="Texture2D" uid="uid://cxxi757iq1gnv" path="res://assets/Sprites/Mario_Big_Run3.png" id="7_sh17w"]
[ext_resource type="Texture2D" uid="uid://bausni6inywyv" path="res://assets/Sprites/Mario_Small_Death.png" id="8_4s5b0"]
[ext_resource type="Texture2D" uid="uid://ugx1dv5u8m74" path="res://assets/Sprites/Mario-Shooting.png" id="9_656dq"]
[ext_resource type="Texture2D" uid="uid://d3i8ain3y4vfj" path="res://assets/Sprites/Mario_Shooting_Jump.png" id="10_jrabl"]
[ext_resource type="Texture2D" uid="uid://cwns46e1wprcc" path="res://assets/Sprites/Mario_Shooting_Pole.png" id="11_pm6ll"]
[ext_resource type="Texture2D" uid="uid://bsfrxav8x3dot" path="res://assets/Sprites/Mario_Shooting_Run1.png" id="12_g2s5k"]
[ext_resource type="Texture2D" uid="uid://cipjmquw1tlrv" path="res://assets/Sprites/Mario_Shooting_Run2.png" id="13_00h4v"]
[ext_resource type="Texture2D" uid="uid://daqnle02fss6v" path="res://assets/Sprites/Mario_Shooting_Run3.png" id="14_ka5fl"]
[ext_resource type="Texture2D" uid="uid://1w6lqgnlyqo2" path="res://assets/Sprites/Mario_Shooting-Slide.png" id="15_jqost"]
[ext_resource type="Texture2D" uid="uid://bqfjqbv1vr2oq" path="res://assets/Sprites/Mario_Small_Jump.png" id="17_velfc"]
[ext_resource type="Texture2D" uid="uid://ckd7ka2h150dt" path="res://assets/Sprites/Mario_Small_Pole.png" id="18_7i5xl"]
[ext_resource type="Texture2D" uid="uid://b7pkrn5h1n5lm" path="res://assets/Sprites/Mario_Small_Run1.png" id="19_ojdyu"]
[ext_resource type="Texture2D" uid="uid://dlhg7nbxeials" path="res://assets/Sprites/Mario_Small_Run2.png" id="20_ebkv7"]
[ext_resource type="Texture2D" uid="uid://d01eopk6c4cx1" path="res://assets/Sprites/Mario_Small_Run3.png" id="21_r0jdk"]
[ext_resource type="Texture2D" uid="uid://cal7r48xqmfrt" path="res://assets/Sprites/Mario_Small_Slide.png" id="22_4indq"]

[sub_resource type="SpriteFrames" id="SpriteFrames_luer0"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("6_vk2xc")
}],
"loop": true,
"name": &"big_idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_vhi1w")
}],
"loop": true,
"name": &"big_jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_k3ci4")
}],
"loop": true,
"name": &"big_pole",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_sh17w")
}, {
"duration": 1.0,
"texture": ExtResource("6_k3ci4")
}, {
"duration": 1.0,
"texture": ExtResource("7_sh17w")
}],
"loop": true,
"name": &"big_run",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_27iqg")
}],
"loop": true,
"name": &"big_slide",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("6_vk2xc")
}, {
"duration": 1.0,
"texture": ExtResource("7_bymyn")
}, {
"duration": 1.0,
"texture": ExtResource("6_vk2xc")
}, {
"duration": 1.0,
"texture": ExtResource("7_bymyn")
}, {
"duration": 1.0,
"texture": ExtResource("6_vk2xc")
}, {
"duration": 1.0,
"texture": ExtResource("7_bymyn")
}, {
"duration": 1.0,
"texture": ExtResource("6_vk2xc")
}, {
"duration": 1.0,
"texture": ExtResource("7_bymyn")
}],
"loop": false,
"name": &"big_to_shooting",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("8_4s5b0")
}],
"loop": true,
"name": &"death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("9_656dq")
}],
"loop": true,
"name": &"shoot",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("7_bymyn")
}],
"loop": true,
"name": &"shooting_idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("10_jrabl")
}],
"loop": true,
"name": &"shooting_jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("11_pm6ll")
}],
"loop": true,
"name": &"shooting_pole",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("12_g2s5k")
}, {
"duration": 1.0,
"texture": ExtResource("13_00h4v")
}, {
"duration": 1.0,
"texture": ExtResource("14_ka5fl")
}],
"loop": true,
"name": &"shooting_run",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("15_jqost")
}],
"loop": true,
"name": &"shooting_slide",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_20hlw")
}],
"loop": true,
"name": &"small_idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("17_velfc")
}],
"loop": true,
"name": &"small_jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("18_7i5xl")
}],
"loop": true,
"name": &"small_pole",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("19_ojdyu")
}, {
"duration": 1.0,
"texture": ExtResource("20_ebkv7")
}, {
"duration": 1.0,
"texture": ExtResource("21_r0jdk")
}],
"loop": true,
"name": &"small_run",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("22_4indq")
}],
"loop": true,
"name": &"small_slide",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_20hlw")
}, {
"duration": 1.0,
"texture": ExtResource("6_vk2xc")
}, {
"duration": 1.0,
"texture": ExtResource("2_20hlw")
}, {
"duration": 1.0,
"texture": ExtResource("6_vk2xc")
}, {
"duration": 1.0,
"texture": ExtResource("2_20hlw")
}, {
"duration": 1.0,
"texture": ExtResource("6_vk2xc")
}, {
"duration": 1.0,
"texture": ExtResource("2_20hlw")
}, {
"duration": 1.0,
"texture": ExtResource("6_vk2xc")
}],
"loop": false,
"name": &"small_to_big",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_20hlw")
}, {
"duration": 1.0,
"texture": ExtResource("7_bymyn")
}, {
"duration": 1.0,
"texture": ExtResource("2_20hlw")
}, {
"duration": 1.0,
"texture": ExtResource("7_bymyn")
}, {
"duration": 1.0,
"texture": ExtResource("2_20hlw")
}, {
"duration": 1.0,
"texture": ExtResource("7_bymyn")
}, {
"duration": 1.0,
"texture": ExtResource("2_20hlw")
}, {
"duration": 1.0,
"texture": ExtResource("7_bymyn")
}],
"loop": false,
"name": &"small_to_shooting",
"speed": 5.0
}]

[node name="Mario" type="CharacterBody2D"]
collision_mask = 62
script = ExtResource("1_w6o04")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_luer0")
animation = &"small_run"
script = ExtResource("3_20hlw")

[node name="Area2D" type="Area2D" parent="."]
collision_mask = 36

[node name="AreaCollisionShape" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, 1)
shape = ExtResource("3_vhu77")

[node name="BodyCollisionShape" type="CollisionShape2D" parent="."]
shape = ExtResource("3_vhu77")

[connection signal="animation_finished" from="AnimatedSprite2D" to="AnimatedSprite2D" method="_on_animation_finished"]
[connection signal="frame_changed" from="AnimatedSprite2D" to="AnimatedSprite2D" method="_on_frame_changed"]
[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
